# SimpleApps

./: .gitignore  .project  CinemaOTNode.h  SimpleApps.cabal  build_log_7.1.txt  test.txt
Test/: Hallo0.txt
src/: BuildLogInfo.hs  ClearGenFiles.hs  DBInsertGen.hs  FileSync.hs  FindFile.hs  NMBuild.hs  ScanInclude.hs  YesodBooks.hs  cloak.bat  make.hs
