name:           SimpleApps
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Koehler

executable ClearGenFiles
  hs-source-dirs:  src
  main-is:         ClearGenFiles.hs
  build-depends:   
                   base >= 4,
                   misc-tools,
                   directory
  ghc-options:     -Wall
  other-modules:   NMBuild

executable FindFile
  hs-source-dirs:  src
  main-is:         FindFile.hs
  build-depends:   
                   base >= 4,
                   misc-tools >= 1.0.2,
                   bytestring,
                   resourcet,
                   transformers,
                   stringsearch,
                   filepath,
                   Glob >=0.7.2 && <0.8
  ghc-options:     -Wall
  other-modules:   NMBuild

executable NMBuild
  build-depends:   base >= 4, text, shelly
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         NMBuild.hs

