name:           SimpleApps
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Koehler



executable BuildLogInfo
  build-depends:   
                   base >= 4, conduit, regex-posix, regex-base
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -O2
  main-is:         BuildLogInfo.hs



executable ScanInclude
  build-depends:   
                   base >= 4, binary, attoparsec,
                   conduit >=1.0.9 && <1.1
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -O2
  main-is:         ScanInclude.hs

executable ClearGenFiles
  hs-source-dirs:  src
  main-is:         ClearGenFiles.hs
  build-depends:   
                   base >= 4,
                   misc-tools,
                   directory
  ghc-options:     -Wall -rtsopts -O2

executable NMBuild
  build-depends:   base >= 4, text, Shell
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -O2
  main-is:         NMBuild.hs

executable FileSync
  build-depends:   base >= 4, time, directory, containers
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -O2
  main-is:         FileSync.hs

executable FindFile
  hs-source-dirs:  src
  main-is:         FindFile.hs
  build-depends:   
                   base >= 4,
                   misc-tools >= 1.0.2,
                   bytestring,
                   resourcet,
                   transformers,
                   stringsearch,
                   filepath,
                   Glob >=0.7.2 && <0.8
  ghc-options:     -Wall -rtsopts -O2

